data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_870.wast
;; 1. **Test Description**: A `loop` instruction that contains a `call` to another function that returns a value. Validate if the function call returns the correct value and the loop continues as expected.    - **Constraint**: This test checks if `call` within a loop maintains the correct function call stack and value return integrity.    - **Improper Handling**: Incorrect operand stack management after function call within loop leads to invalid stack state. -

(assert_invalid
  (module
    (func $callee (result i32)
      i32.const 42
    )
    (func $caller
      (i32.const 0)
      (loop (param i32)
        call $callee
        br_if 0
      )
    )
  )
  "type mismatch"
)